try some more spacing fixes for outlook

--- a/sass/email/00_base/_root.scss
+++ b/sass/email/00_base/_root.scss
@@ -16,7 +16,7 @@ img {
 }
 
 table {
-    font-size: inherit;
+    @include body-preset( $size: 0 );
     margin: 0;
     padding: 0;
 }
