--- a/sass/email/02_molecule/_m-menus.scss
+++ b/sass/email/02_molecule/_m-menus.scss
@@ -4,6 +4,7 @@
     border-bottom: 2px solid neutral-color(dark);
     border-top: 2px solid neutral-color(dark);
 	margin-bottom: $standard-heading-margin;
+	@include meta-preset( $size: 0 );
 
     @include breakpoint-max( $large-screen-width ) {
         border-top: 0;
