--- a/sass/email/02_molecule/_m-teaser.scss
+++ b/sass/email/02_molecule/_m-teaser.scss
@@ -1,5 +1,5 @@
 .m-teaser {
-    padding-bottom: $standard-block-margin;
+    margin-bottom: $standard-block-margin;
 
     * {
         @include meta-preset( $size: 1, $bold: inherit, $italic: inherit );
